kubernetes/apps/external-services/nas-minio/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas-minio
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.69.10.11
    ports:
      - name: http
        port: 9002
        protocol: TCP
      - name: api
        port: 9000
        protocol: TCP
