kubernetes/apps/external-services/nas-minio/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-minio
  namespace: external-services
spec:
  # selector:
  #   app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      # protocol: HTTP
      port: 9002
      # targetPort:
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nas-s3
  namespace: external-services
spec:
  ports:
    - name: api
      # protocol: HTTP
      port: 9000
      # targetPort:
  type: ClusterIP
