kubernetes/apps/external-services/nas-minio/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-minio
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.nas-minio
      hosts:
        - "nas-minio.${SECRET_DOMAIN}"

  rules:
    - host: nas-minio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas-minio
                port:
                  name: http
    - host: nas-s3.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas-s3
                port:
                  name: api
